@@ -1,23 +1,22 @@
 package pl.krystian.ecommerce.sales.cart;
 
-import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.stream.Collectors;
 
 public class Cart {
 
-    HashMap<String, Integer> productsQty;
-
+    private final HashMap<String, Integer> productsQuantities;
+//
     public Cart() {
-        this.productsQty = new HashMap<>();
+        this.productsQuantities = new HashMap<>();
     }
 
     public static Cart empty() {
         return new Cart();
     }
 
-    public void addProduct(String productId) {
+    public void add(String productId) {
         if (!isInCart(productId)) {
             putIntoCart(productId);
         }
@@ -27,34 +26,30 @@ public class Cart {
     }
 
     private void increaseQuantity(String productId) {
-        productsQty.put(productId, productsQty.get(productId) + 1);
+        productsQuantities.put(productId, productsQuantities.get(productId) + 1);
     }
 
     private void putIntoCart(String productId) {
-        productsQty.put(productId, 1);
+        productsQuantities.put(productId, 1);
     }
 
     private boolean isInCart(String productId) {
-        return productsQty.containsKey(productId);
-
-//        return products.stream()
-//                .filter(p -> products.equals(productId))
-//                .count();
+        return productsQuantities.containsKey(productId);
     }
 
     public boolean isEmpty() {
-        return productsQty.isEmpty();
+        return productsQuantities.values().isEmpty();
     }
 
-    public int getProductsCount() {
-        return productsQty.values().size();
+    public int getItemsCount() {
+        return productsQuantities.values().size();
     }
 
-    public List<CartLines> getLines() {
-        return productsQty
+    public List<CartItem> getCartItems() {
+        return productsQuantities
                 .entrySet()
                 .stream()
-                .map(es -> new CartLines(es.getKey(), es.getValue()))
-                .toList();
+                .map(es -> new CartItem(es.getKey(), es.getValue()))
+                .collect(Collectors.toList());
     }
 }
